--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/main.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/main.fxml
@@ -2,91 +2,72 @@
 
 <?import java.lang.*?>
 <?import javafx.collections.*?>
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="840.0" prefWidth="633.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<AnchorPane prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.MainController">
    <children>
-      <VBox minHeight="800.0" minWidth="600.0" prefHeight="200.0" prefWidth="100.0">
-         <HBox prefHeight="100.0" prefWidth="200.0">
-            <children>
-                <TextField fx:id="searchTag" prefHeight="25.0" prefWidth="274.0">
-                  <HBox.margin>
-                     <Insets left="10.0" />
-                  </HBox.margin>
-               </TextField>
-               <ChoiceBox fx:id="searchType" prefWidth="150.0">
-                  <HBox.margin>
-                     <Insets left="10.0" />
-                  </HBox.margin>
-                   <items>
-                       <FXCollections fx:factory="observableArrayList">
-                           <String fx:value="ФИО" />
-                           <String fx:value="Телефон" />
-                       </FXCollections>
-                   </items>
-               </ChoiceBox>
-               <Button mnemonicParsing="false" onAction="#findPatients" text="Поиск">
-                  <HBox.margin>
-                     <Insets left="10.0" />
-                  </HBox.margin>
-               </Button>
-            </children>
-            <VBox.margin>
-               <Insets top="10.0" />
-            </VBox.margin>
-         </HBox>
-         <HBox prefHeight="50.0" prefWidth="200.0">
-            <children>
-                <Button fx:id="patientsList" mnemonicParsing="false" onAction="#showPatients" text="Реестр пациентов" />
-                <Button fx:id="addPatientButton" mnemonicParsing="false" onAction="#addEntity" prefWidth="25.0" text="+">
-                    <opaqueInsets>
-                        <Insets left="100.0" />
-                    </opaqueInsets>
-                    <HBox.margin>
-                        <Insets left="10.0" />
-                    </HBox.margin>
-                </Button>
-               <Button fx:id="removePatientButton" onAction="#removeEntity" mnemonicParsing="false" prefWidth="25.0" text="-">
-                  <HBox.margin>
-                     <Insets left="10.0" />
-                  </HBox.margin>
-               </Button>
-            </children>
-         </HBox>
-          <TableView fx:id="patientTable" layoutX="60.0" layoutY="68.0" maxHeight="200.0" maxWidth="600.0" minWidth="100.0" prefHeight="100.0" prefWidth="600.0">
-              <columns>
-              </columns>
-          </TableView>
-          <HBox prefHeight="50.0" prefWidth="200.0">
-              <children>
-                  <Button fx:id="notificationsList" mnemonicParsing="false" onAction="#showPatients" text="Напоминания" />
-                  <Button fx:id="addNotificationButton" mnemonicParsing="false" onAction="#addEntity" prefWidth="25.0" text="+">
-                      <opaqueInsets>
-                          <Insets left="100.0" />
-                      </opaqueInsets>
-                      <HBox.margin>
-                          <Insets left="10.0" />
-                      </HBox.margin>
-                  </Button>
-               <Button fx:id="removeNotificationButton" onAction="#removeEntity" mnemonicParsing="false" prefWidth="25.0" text="-">
-                  <HBox.margin>
-                     <Insets left="10.0" />
-                  </HBox.margin>
-               </Button>
-              </children>
-          </HBox>
-          <TableView fx:id="notificationTable" layoutX="60.0" layoutY="68.0" prefHeight="42.0" prefWidth="600.0">
-              <columns>
-              </columns>
-            <VBox.margin>
-               <Insets top="10.0" />
-            </VBox.margin>
-          </TableView>
-      </VBox>
+      <TextField fx:id="searchTag" layoutX="14.0" layoutY="12.0" prefHeight="25.0" prefWidth="193.0">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></TextField>
+      <ChoiceBox fx:id="searchType" layoutX="218.0" layoutY="12.0" prefWidth="150.0" value="ФИО">
+
+          <items>
+              <FXCollections fx:factory="observableArrayList">
+                  <String fx:value="ФИО" />
+                  <String fx:value="Телефон" />
+
+              </FXCollections>
+          </items>
+      </ChoiceBox>
+      <Button layoutX="378.0" layoutY="12.0" mnemonicParsing="false" onAction="#findPatients" text="Поиск">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <Label layoutX="14.0" layoutY="52.0" text="Напоминания">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Label>
+      <Button fx:id="addNotificationButton" layoutX="126.0" layoutY="48.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <Button fx:id="removeNotificationButton" layoutX="162.0" layoutY="48.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <TableView fx:id="notificationTable" layoutX="11.0" layoutY="81.0" maxHeight="200.0" maxWidth="400.0" prefHeight="128.0" prefWidth="400.0">
+        <columns>
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button fx:id="patientsList" layoutX="11.0" layoutY="288.0" mnemonicParsing="false" onAction="#showPatients" text="Реестр пациентов">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <Button fx:id="addPatientButton" layoutX="172.0" layoutY="288.0" mnemonicParsing="false" onAction="#addEntity" text="+">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <Button fx:id="removePatientButton" layoutX="206.0" layoutY="288.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-">
+         <font>
+            <Font name="Century Gothic" size="14.0" />
+         </font></Button>
+      <Label fx:id="allPatientsSize"  layoutX="240.0" layoutY="293.0">
+          <font>
+              <Font name="Century Gothic" size="14.0" />
+          </font>
+      </Label>
+      <TableView fx:id="patientTable" layoutX="11.0" layoutY="322.0" maxHeight="200.0" maxWidth="400.0" prefHeight="128.0" prefWidth="400.0">
+        <columns>
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
