--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/patient.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/patient.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="334.0" prefWidth="257.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.PatientController">
+<AnchorPane prefHeight="393.0" prefWidth="257.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.PatientController">
    <children>
       <Label layoutX="10.0" layoutY="21.0" text="ФИО" />
       <TextField fx:id="nameTextField" layoutX="91.0" layoutY="14.0" />
@@ -11,12 +11,14 @@
       <TextField fx:id="phoneTextField" layoutX="92.0" layoutY="53.0" />
       <Label layoutX="10.0" layoutY="97.0" text="Адрес" />
       <TextField fx:id="addressTextField" layoutX="92.0" layoutY="93.0" />
-      <Label layoutX="10.0" layoutY="136.0" text="Диагноз" />
-      <TextField fx:id="diagnosisTextField" layoutX="92.0" layoutY="132.0" />
-      <Label layoutX="10.0" layoutY="156.0" prefHeight="57.0" prefWidth="56.0" text="Дата рождения" wrapText="true" />
-      <DatePicker fx:id="datePicker" layoutX="92.0" layoutY="171.0" prefHeight="25.0" prefWidth="149.0" />
-      <Label layoutX="10.0" layoutY="213.0" prefHeight="17.0" prefWidth="74.0" text="Примечания" />
-      <TextArea fx:id="remarkArea" layoutX="91.0" layoutY="213.0" prefHeight="50.0" prefWidth="149.0" />
-      <Button layoutX="84.0" layoutY="288.0" mnemonicParsing="false" onAction="#savePatient" text="Добавить" />
+      <Label layoutX="10.0" layoutY="166.0" text="Диагноз" />
+      <TextField fx:id="diagnosisTextField" layoutX="92.0" layoutY="162.0" />
+      <Label layoutX="10.0" layoutY="186.0" prefHeight="57.0" prefWidth="56.0" text="Дата рождения" wrapText="true" />
+      <DatePicker fx:id="datePicker" layoutX="92.0" layoutY="201.0" prefHeight="25.0" prefWidth="149.0" />
+      <Label layoutX="10.0" layoutY="243.0" prefHeight="17.0" prefWidth="74.0" text="Примечания" />
+      <TextArea fx:id="remarkArea" layoutX="91.0" layoutY="243.0" prefHeight="50.0" prefWidth="149.0" />
+      <Button layoutX="84.0" layoutY="318.0" mnemonicParsing="false" onAction="#savePatient" text="Добавить" />
+      <Label layoutX="9.0" layoutY="132.0" text="Код МКБ" />
+      <TextField fx:id="clinicalCodeField" layoutX="92.0" layoutY="128.0" />
    </children>
 </AnchorPane>
