--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/notification.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/notification.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane prefHeight="246.0" prefWidth="333.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.NotificationController">
    <children>
       <Label layoutX="14.0" layoutY="20.0" text="Действие" />
@@ -12,6 +11,7 @@
       <Label layoutX="14.0" layoutY="91.0" text="Выполнить до" />
       <CheckBox fx:id="executedBox" layoutX="103.0" layoutY="128.0" mnemonicParsing="false" />
       <Label layoutX="14.0" layoutY="128.0" text="Выполнено" />
-      <Button fx:id="endActionButton" onAction="#endAction" layoutX="130.0" layoutY="187.0" mnemonicParsing="false" text="Сохранить" />
+      <Button fx:id="endActionButton" layoutX="130.0" layoutY="187.0" mnemonicParsing="false" onAction="#endAction" text="Сохранить" />
+      <Label fx:id="patientNameLabel" layoutX="14.0" layoutY="157.0" />
    </children>
 </AnchorPane>
