--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/patient-card.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/patient-card.fxml
@@ -11,34 +11,34 @@
       <TextField fx:id="phoneTextField" editable="false" layoutX="92.0" layoutY="53.0" />
       <Label layoutX="10.0" layoutY="96.0" text="Адрес" />
       <TextField fx:id="addressTextField" editable="false" layoutX="92.0" layoutY="93.0" />
-      <Label layoutX="10.0" layoutY="167.0" text="Диагноз" />
-      <TextField fx:id="diagnosisTextField" editable="false" layoutX="92.0" layoutY="163.0" />
+      <Label layoutX="259.0" layoutY="18.0" text="Диагноз" />
+      <TextArea fx:id="diagnosisTextField" editable="false" layoutX="316.0" layoutY="17.0" prefHeight="193.0" prefWidth="231.0" wrapText="true" />
       <CheckBox fx:id="editCheckBox" layoutX="10.0" layoutY="308.0" mnemonicParsing="false" onAction="#switchEditAbility" text="Редактировать" />
       <Button fx:id="saveButton" disable="true" layoutX="129.0" layoutY="304.0" mnemonicParsing="false" onAction="#savePatient" text="Сохранить" />
-      <TableView fx:id="surveyTable" layoutX="251.0" layoutY="56.0" prefHeight="200.0" prefWidth="300.0">
+      <TableView fx:id="surveyTable" layoutX="565.0" layoutY="56.0" prefHeight="200.0" prefWidth="300.0">
         <columns>
         </columns>
       </TableView>
-      <Label layoutX="251.0" layoutY="30.0" text="Телефонный опрос" />
-      <Button fx:id="telephoneSurveyButton" layoutX="374.0" layoutY="26.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+" />
-      <TableView fx:id="notificationTable" layoutX="564.0" layoutY="56.0" prefHeight="200.0" prefWidth="335.0">
+      <Label layoutX="565.0" layoutY="30.0" text="Телефонный опрос" />
+      <Button fx:id="telephoneSurveyButton" layoutX="688.0" layoutY="26.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+" />
+      <TableView fx:id="notificationTable" layoutX="564.0" layoutY="399.0" prefHeight="200.0" prefWidth="335.0">
          <columns>
          </columns>
       </TableView>
-      <Label layoutX="564.0" layoutY="30.0" text="Уведомления" />
-      <Button fx:id="notificationButton" layoutX="648.0" layoutY="26.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+" />
+      <Label layoutX="564.0" layoutY="373.0" text="Уведомления" />
+      <Button fx:id="notificationButton" layoutX="648.0" layoutY="369.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+" />
       <TableView fx:id="analysisTable" layoutX="18.0" layoutY="400.0" prefHeight="200.0" prefWidth="400.0">
       </TableView>
       <Label layoutX="18.0" layoutY="373.0" text="Результаты исследований" />
       <Button fx:id="addAnalysisButton" layoutX="166.0" layoutY="369.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+" />
-      <Button fx:id="removeSurveyButton" layoutX="407.0" layoutY="26.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-" />
-      <Button fx:id="removeNotificationButton" layoutX="682.0" layoutY="26.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-" />
+      <Button fx:id="removeSurveyButton" layoutX="721.0" layoutY="26.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-" />
+      <Button fx:id="removeNotificationButton" layoutX="682.0" layoutY="369.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-" />
       <Button fx:id="removeAnalysisButton" layoutX="205.0" layoutY="369.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-" />
       <Button layoutX="11.0" layoutY="338.0" mnemonicParsing="false" onAction="#refreshEntities" text="Обновить данные" />
-      <Label layoutX="10.0" layoutY="187.0" prefHeight="57.0" prefWidth="56.0" text="Дата рождения" wrapText="true" />
-      <DatePicker fx:id="datePicker" disable="true" layoutX="92.0" layoutY="202.0" prefHeight="25.0" prefWidth="149.0" />
-      <Label layoutX="10.0" layoutY="244.0" prefHeight="17.0" prefWidth="74.0" text="Примечания" />
-      <TextArea fx:id="remarkArea" disable="true" layoutX="91.0" layoutY="244.0" prefHeight="50.0" prefWidth="149.0" />
+      <Label layoutX="10.0" layoutY="150.0" prefHeight="57.0" prefWidth="56.0" text="Дата рождения" wrapText="true" />
+      <DatePicker fx:id="datePicker" disable="true" layoutX="92.0" layoutY="165.0" prefHeight="25.0" prefWidth="149.0" />
+      <Label layoutX="10.0" layoutY="207.0" prefHeight="17.0" prefWidth="74.0" text="Примечания" />
+      <TextArea fx:id="remarkArea" disable="true" layoutX="91.0" layoutY="207.0" prefHeight="50.0" prefWidth="149.0" />
       <Label layoutX="10.0" layoutY="131.0" text="Код МКБ" />
       <TextField fx:id="clinicalCodeField" editable="false" layoutX="92.0" layoutY="128.0" />
    </children>
