--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/notification.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/notification.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="246.0" prefWidth="333.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.NotificationController">
-   <children>
-      <Label layoutX="14.0" layoutY="20.0" text="Действие" />
-      <TextArea fx:id="actionArea" layoutX="103.0" layoutY="20.0" prefHeight="54.0" prefWidth="200.0" />
-      <DatePicker fx:id="datePicker" layoutX="103.0" layoutY="87.0" prefHeight="25.0" prefWidth="200.0" />
-      <Label layoutX="14.0" layoutY="91.0" text="Выполнить до" />
-      <CheckBox fx:id="executedBox" layoutX="103.0" layoutY="128.0" mnemonicParsing="false" />
-      <Label layoutX="14.0" layoutY="128.0" text="Выполнено" />
-      <Button fx:id="endActionButton" layoutX="130.0" layoutY="187.0" mnemonicParsing="false" onAction="#endAction" text="Сохранить" />
-      <Label fx:id="patientNameLabel" layoutX="14.0" layoutY="157.0" />
-   </children>
+   <Label layoutX="14.0" layoutY="20.0" text="Действие" />
+   <TextArea fx:id="actionArea" layoutX="103.0" layoutY="20.0" prefHeight="54.0" prefWidth="200.0" />
+   <DatePicker fx:id="datePicker" layoutX="103.0" layoutY="87.0" prefHeight="25.0" prefWidth="200.0" />
+   <Label layoutX="14.0" layoutY="91.0" text="Выполнить до" />
+   <CheckBox fx:id="executedBox" layoutX="103.0" layoutY="128.0" mnemonicParsing="false" />
+   <Label layoutX="14.0" layoutY="128.0" text="Выполнено" />
+   <Button fx:id="endActionButton" layoutX="130.0" layoutY="213.0" mnemonicParsing="false" onAction="#endAction" text="Сохранить" />
+   <Label fx:id="patientNameLabel" layoutX="14.0" layoutY="187.0" />
+   <Label layoutX="14.0" layoutY="157.0" text="Направлен" />
+   <CheckBox fx:id="directedCheckBox" layoutX="102.0" layoutY="157.0" mnemonicParsing="false" onAction="#switchEditAbility" />
 </AnchorPane>
