--- a/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/main.fxml
+++ b/src/main/resources/com/dolzhenko_m_s/doctorhelpsystem/main.fxml
@@ -7,67 +7,56 @@
 <?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dolzhenko_m_s.doctorhelpsystem.MainController">
-   <children>
-      <TextField fx:id="searchTag" layoutX="14.0" layoutY="12.0" prefHeight="25.0" prefWidth="193.0">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></TextField>
-      <ChoiceBox fx:id="searchType" layoutX="218.0" layoutY="12.0" prefWidth="150.0" value="ФИО">
-
-          <items>
-              <FXCollections fx:factory="observableArrayList">
-                  <String fx:value="ФИО" />
-                  <String fx:value="Телефон" />
-
-              </FXCollections>
-          </items>
-      </ChoiceBox>
-      <Button layoutX="378.0" layoutY="12.0" mnemonicParsing="false" onAction="#findPatients" text="Поиск">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <Label layoutX="14.0" layoutY="52.0" text="Напоминания">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Label>
-      <Button fx:id="addNotificationButton" layoutX="126.0" layoutY="48.0" mnemonicParsing="false" onAction="#addEntity" prefHeight="25.0" prefWidth="25.0" text="+">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <Button fx:id="removeNotificationButton" layoutX="162.0" layoutY="48.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <TableView fx:id="notificationTable" layoutX="11.0" layoutY="81.0" maxHeight="200.0" prefHeight="128.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="10.0">
-        <columns>
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Button fx:id="patientsList" layoutX="11.0" layoutY="288.0" mnemonicParsing="false" onAction="#showPatients" text="Реестр пациентов">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <Button fx:id="addPatientButton" layoutX="172.0" layoutY="288.0" mnemonicParsing="false" onAction="#addEntity" text="+">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <Button fx:id="removePatientButton" layoutX="206.0" layoutY="288.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-">
-         <font>
-            <Font name="Century Gothic" size="14.0" />
-         </font></Button>
-      <Label fx:id="allPatientsSize" layoutX="240.0" layoutY="293.0">
-          <font>
-              <Font name="Century Gothic" size="14.0" />
-          </font>
-      </Label>
-      <TableView fx:id="patientTable" layoutX="11.0" layoutY="322.0" maxHeight="200.0" prefHeight="128.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="322.0">
-        <columns>
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </children>
+    <children>
+        <TextField fx:id="searchTag" layoutX="14.0" layoutY="12.0" prefHeight="25.0" prefWidth="193.0">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </TextField>
+        <ChoiceBox fx:id="searchType" layoutX="218.0" layoutY="12.0" prefWidth="150.0" value="ФИО">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <String fx:value="ФИО" />
+                    <String fx:value="Телефон" />
+                </FXCollections>
+            </items>
+        </ChoiceBox>
+        <Button layoutX="378.0" layoutY="12.0" mnemonicParsing="false" onAction="#findPatients" text="Поиск">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Button>
+        <Button layoutX="14.0" layoutY="52.0" onAction="#showAllNotifications" text="Напоминания">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Button>
+        <Button fx:id="patientsList" layoutX="11.0" layoutY="93.0" mnemonicParsing="false" onAction="#showPatients" text="Реестр пациентов">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Button>
+        <Button fx:id="addPatientButton" layoutX="172.0" layoutY="94.0" mnemonicParsing="false" onAction="#addEntity" text="+">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Button>
+        <Button fx:id="removePatientButton" layoutX="206.0" layoutY="94.0" mnemonicParsing="false" onAction="#removeEntity" prefHeight="25.0" prefWidth="25.0" text="-">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Button>
+        <Label fx:id="allPatientsSize" layoutX="240.0" layoutY="293.0">
+            <font>
+                <Font name="Century Gothic" size="14.0" />
+            </font>
+        </Label>
+        <TableView fx:id="patientTable" layoutX="11.0" layoutY="138.0" maxHeight="200.0" prefHeight="128.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="140.0">
+            <columns>
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+    </children>
 </AnchorPane>
